--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     
-    "test": "npx cypress run",
+    "test": "npm cypress run",
     "recorded":"npx cypress run --record --key 08c30cdf-3d08-49fa-b233-e66165e0ae42"
 
     
