--- a/email_Config.json
+++ b/email_Config.json
@@ -1,6 +1,6 @@
 {
     "senderEmail": "qa@comfortclick.co.uk",
-    "senderPassword": "",
+    "senderPassword": "uyfi kirn gflr vczo",
     "receiverEmails": ["shreeniwas.ukhale@comfortclick.co.uk"]
 }
       
