--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@2captcha/captcha-solver": "^1.1.1",
     "2captcha": "^3.0.5-2",
+    "cypress-dotenv": "^2.0.0",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "6.9.14",
