--- a/email_Config.json
+++ b/email_Config.json
@@ -1,6 +1,6 @@
 {
     "senderEmail": "qa@comfortclick.co.uk",
     "senderPassword": "uyfi kirn gflr vczo",
-    "receiverEmails": ["shreeniwas.ukhale@comfortclick.co.uk"]
+    "receiverEmails": ["shreeniwas.ukhale@comfortclick.co.uk,sharath.kumar@comfortclick.co.uk"]
 }
       
